# ranking-rs

./: .gitignore  Cargo.toml  README.md
examples/: basic.rs  graphed.rs  pairs.rs
src/: lib.rs
tests/: fair_vote.rs
